# nds-plus

./: .gitignore  Cargo.toml  README.md  game_db.json
desktop/: .gitignore  Cargo.toml
desktop/src/: cloud_service.rs  frontend.rs  main.rs
mobile/: .gitignore  Cargo.toml  build-rust.sh
mobile/src/: lib.rs
src/: apu.rs  cpu.rs  gpu.rs  lib.rs  nds.rs  number.rs  scheduler.rs  util.rs
src/apu/: channel.rs
src/apu/registers/: mod.rs  sound_capture_control_register.rs  sound_channel_control_register.rs  sound_control_register.rs
src/cpu/: arm_disassembly.rs  arm_instructions.rs  bus.rs  cp15.rs  cycle_lookup_tables.rs  disassembly.rs  rotations_shifts.rs  thumb_disassembly.rs  thumb_instructions.rs
src/cpu/bus/: arm7.rs  arm9.rs  backup_file.rs  cartridge.rs  cp15.rs  eeprom.rs  firmware_data.rs  flash.rs  spi.rs  touchscreen.rs  wram_control_register.rs
src/cpu/dma/: dma_channel.rs  dma_channels.rs  mod.rs
src/cpu/registers/: date_time_register.rs  division_control_register.rs  external_key_input_register.rs  mod.rs  (+12 more)
src/gpu/: color.rs  display_control_register.rs  engine_2d.rs  engine_3d.rs  rendering_data.rs  rendering_data3d.rs  vram.rs
wasm/: Cargo.toml  app.css  audio_processing_node.js  game_db.js  game_db.json  index.html  processors.js
wasm/app/: .gitignore  audio.ts  index.html  index.ts  package-lock.json  package.json  processors.js  renderer.ts  tsconfig.json  ui.ts  webpack.config.js
wasm/pkg/: ds_emulator_wasm.d.ts  ds_emulator_wasm.js  ds_emulator_wasm_bg.wasm  ds_emulator_wasm_bg.wasm.d.ts  package.json
wasm/src/: lib.rs
(+59 files in other folders)
